<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">测试吧</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="telephone">打电话</string>
    <string name="sendsms">发短信</string>
    <string name="testapps">第三方应用</string>
    <string name="call_button">CALL</string>
    <string name="edit_dial_num">请输入电话号码</string>
    <string name="call_title">语音业务调用测试</string>
    <string name="main_switch_default">木有了！</string>
    <string name="super_user">SU</string>
    <string name="hint_phone_number_illegal">电话号码只能是数字！</string>
    <string name="hint_input_phone_number">请输入电话号码！</string>
    <string name="hint_read_jsonfile_error">文件不存在或空文件！</string>
    <string name="hint_write_jsonfile_error">文件可能没有写成功！</string>
    <string name="hint_update_jsonfile_error">文件可能没有被成功更新！</string>
    <string name="JSON_FILENAME_PARAMETER">testcaseparameter.json</string>
    <string name="JSON_FILEDIR_PARAMETER">testcase</string>
    <string name="sms_sendto">发送至：</string>
    <string name="sms_content">信息内容：</string>
    <string name="sms_repeat_times">重复次数：</string>
    <string name="sms_is_long_sms">发送超长信息</string>
    <string name="sms_title">短消息业务调用测试</string>
    <string name="sms_button">START</string>
    <string name="hint_input_sms_content">请输入短信内容！</string>
    <string name="hint_input_repeat_times">请输入重复次数！</string>
    <string name="hint_repeat_times_illegal">重复次数只能是数字！</string>
    <string name="JSON_FILEDIR_TESTCASE">testcase</string>
    <string name="JSON_FILENAME_TESTCASE">testcase.jar</string>
    <string name="task_schedule">建立测试任务</string>
    <string name="weixinapp">微信</string>
    <string name="send_text">发送文本信息</string>
    <string name="send_pic">发送图片</string>
    <string name="hint_weixin_input_user_name">请输入微信联系人姓名</string>
    <string name="hint_weixin_input_msg">请输入信息内容！</string>
    <string name="title_weixin_textmsg">微信文本信息发送测试</string>
    <string name="default_dial_number">10086</string>
    <string name="default_phone_number">13910437320</string>
    <string name="default_text_content">Hello, this is an automatically generated message!</string>
    <string name="default_repeat_times">5</string>
    <string name="default_weixin_username">熊猫</string>
    <string name="default_image_index">1</string>
    <string name="title_weixin_imagemsg">微信图片信息发送测试</string>
    <string name="image_index">图片索引：</string>
    <string name="hint_image_index_illegal">图片索引只能是数字！</string>
    <string name="hint_input_image_index">请输入图片索引！</string>
    <string name="caption_add_task">添加测试任务</string>
    <string name="caption_save">保存</string>
    <string name="caption_call">CALL</string>
    <string name="toast_para_saved">参数已保存！</string>
    <string name="caption_testcase_title">Case</string>
    <string name="caption_delay">延时(秒)：</string>
    <string name="caption_add">添加</string>
    <string name="caption_delete">删除</string>
    <string name="toast_delay_time_error">输入格式错误，请输入0或正整数！</string>
    <string name="toast_task_repeat_times_error">输入错误，请输入正整数！</string>
    <string name="JSON_FILEDIR_TASKLIST">testcase</string>
    <string name="JSON_FILENAME_TASKLIST">tasklist.json</string>
    <string name="toast_tasklist_empty">当前没有任务！</string>
    <string name="toast_task_run_error_1">错误：任务文件可能为空文件！</string>
    <string name="toast_task_run_error_2">错误：JSON格式错误或无JSON对象！</string>
    <string name="toast_task_run_error_3">错误：执行命令发生IO异常！</string>
    <string name="toast_task_run_error_4">错误：执行命令发生Interrupt异常！</string>
    <string name="toast_task_run_ok">任务执行完成！</string>
    <string name="task_repeat_times">1</string>
    <string name="caption_run">Run</string>
    <string name="caption_clear">Clear</string>
    <string name="title_call_duration">通话时长（秒）：</string>
    <string name="default_call_duration">20</string>
    <string name="hint_call_duration_illegal">通话时长只能为正整数！</string>
    <string name="hint_input_call_duration">请输入通话时长！</string>
    <string name="app_name_cmlab">CMLAB ServiceTest</string>
    <string name="call_activity_name">语音呼叫</string>
    <string name="sms_activity_name">发短信</string>
    <string name="apps_activity_name">第三方应用</string>
    <string name="weixin_activity_name">微信</string>
    <string name="weixintextmsg_activity_name">微信发送文本信息</string>
    <string name="weixinimagemsg_activity_name">微信发送图片信息</string>
    <string name="tasklist_activity_name">建立测试任务</string>
    <string name="toast_testcase_run_sucess">测试例执行成功！</string>
    <string name="toast_testcase_run_fail">测试例执行失败！</string>
    <string name="toast_thread_started">测试例线程已经启动！</string>
    <string name="toast_launch_info">开始测试吧！</string>
    <string name="JSON_SDCARD_PATH">/sdcard</string>
    <string name="title_setup">路径设置</string>
    <string name="title_sdcard_path">内置SD卡目录：</string>
    <string name="title_parameter_path">测试例参数文件目录：</string>
    <string name="title_parameter_filename">测试例参数文件名：</string>
    <string name="title_testcase_path">测试例目录：</string>
    <string name="title_testcase_filename">测试例文件名：</string>
    <string name="title_task_path">测试任务文件目录：</string>
    <string name="title_task_filename">测试任务文件名：</string>
    <string name="JSON_FILEDIR_SETUP">testcase</string>
    <string name="JSON_FILENAME_SETUP">setup.json</string>
    <string name="setup_activity_name">路径设置</string>
    <string name="toast_input_sdcard_path">请输入内置SD卡目录！</string>
    <string name="toast_input_testcase_path">请输入测试例目录！</string>
    <string name="toast_input_testcase_filename">请输入测试例文件名！</string>
    <string name="toast_input_para_path">请输入测试例参数文件目录！</string>
    <string name="toast_input_para_filename">请输入测试例参数文件名！</string>
    <string name="toast_input_task_path">请输入测试任务文件目录！</string>
    <string name="toast_input_task_filename">请输入测试任务文件名！</string>
    <string name="toast_setup_file_error">设置文件错误！</string>
    <string name="toast_no_setup_file">设置文件不存在！</string>
    <string name="toast_setup_file_empty">设置文件为空文件！</string>
    <string name="serverurlsetup_activity_name">设置服务器</string>
    <string name="title_setup_serverurl">设置服务器IP或URL</string>
    <string name="caption_input_url">服务器地址：</string>
    <string name="caption_ping">Ping</string>
    <string name="default_server_url">www.baidu.com</string>
    <string name="toast_input_server_url">请输入服务器地址！</string>
    <string name="ping_server_error1">无法联通服务器，请检查网络连接、并确认url正确！</string>
    <string name="register_activity_name">注册手机</string>
    <string name="title_register">本机系统ID</string>
    <string name="no_id">本机未注册系统ID！</string>
    <string name="caption_register">注册</string>
    <string name="TXT_FILEDIR_DEVICEID">testcase</string>
    <string name="TXT_FILENAME_DEVICEID">deviceid.txt</string>
    <string name="toast_read_server_url_fail">没有读取到服务器url！</string>
    <string name="title_IMSI">IMSI：</string>
    <string name="title_IMEI">IMEI：</string>
    <string name="title_model">设备型号：</string>
    <string name="title_manufacturer">设备制造商：</string>
    <string name="title_IMEISV">IMEI/SV：</string>
    <string name="title_serial">设备序列号：</string>
    <string name="title_MSISDN">MSISDN（手机号）：</string>
    <string name="title_MCCMNC">MCC+MNC：</string>
    <string name="title_NWOPName">网络运营商名：</string>
    <string name="title_SIMMCCMNC">MCC+MNC（SIM）：</string>
    <string name="title_SIMOPName">SIM卡服务商名：</string>
    <string name="title_SIMSerial">SIM卡序列号：</string>
    <string name="title_isroaming">是否漫游：</string>
    <string name="title_device_info">设备信息：</string>
    <string name="devision">----------------------------------------------------</string>
    <string name="caption_current_time">当前时间：</string>
    <string name="caption_gps_time">GPS时间：</string>
    <string name="caption_gps_info">GPS信息：</string>
    <string name="title_CellID">小区ID：</string>
    <string name="title_ping">Ping测试</string>
    <string name="caption_url">目的地址或URL：</string>
    <string name="caption_count">重复次数：</string>
    <string name="caption_delete_pingtxt">删除ping.txt</string>
    <string name="caption_stop">Stop</string>
    <string name="ping_activity_name">Ping测试</string>
    <string name="toast_input_ping_url">请输入ping目的地址或URL！</string>
    <string name="toast_input_ping_count">请输入Ping次数！</string>
    <string name="toast_input_count_error">输入错误，ping次数应为正整数！</string>
    <string name="default_ping_url">www.baidu.com</string>
    <string name="default_ping_count">100</string>
    <string name="appicon">AppIcon</string>
    <string name="toast_testcase_run">测试例开始执行！</string>
    <string name="toast_deletefile_success">文件删除成功！</string>
    <string name="toast_deletefile_fail">文件删除失败！</string>
    <string name="title_network_type">网络类型：</string>
    <string name="network_type_unknown">网络类型未知</string>
    <string name="network_type_gprs">GPRS网络</string>
    <string name="network_type_edge">EDGE网络</string>
    <string name="network_type_umts">UMTS网络</string>
    <string name="network_type_hsdpa">HSDPA网络</string>
    <string name="network_type_hsupa">HSUPA网络</string>
    <string name="network_type_hspa">HSPA网络</string>
    <string name="network_type_cdma">CDMA网络</string>
    <string name="network_type_evdo_0">EVDO网络, revision 0.5</string>
    <string name="network_type_evdo_a">EVDO网络, revision A.6</string>
    <string name="network_type_1xrtt">1xRTT网络</string>
    <string name="network_type_iden">iDen网络</string><string name="network_type_hspap">HSPAP网络</string><string name="network_type_evdo_b">EVDO网络, revision B</string><string name="network_type_ehrpd">EHRPD网络</string><string name="network_type_lte">LTE网络</string><string name="title_phone_type">手机信号类型：</string>
    <string name="phone_type_none">无信号</string>
    <string name="phone_type_gsm">GSM信号</string>
    <string name="phone_type_cdma">CDMA信号</string>
    <string name="phone_type_sip">SIP信号</string>
    <string name="map">地图</string>
    <string name="title_map">地图</string>
    <string name="main_activity_name">测试吧</string>
    <string name="version">Build_2017.6.21</string>
    <string name="weixintext">微信文本</string>
    <string name="weixinimage">微信图片</string>
    <string name="mocall">MOCALL</string>
    
    
    
    
    <string name="title_data_state">数据连接状态：</string>
    <string name="data_connected">已连接</string>
    <string name="data_connecting">正在连接</string>
    <string name="data_suspended">挂起（suspend）</string>
    <string name="data_disconnected">未连接</string>
    <string name="title_radio_signal_strength">信号强度：</string>
    <string name="title_lte_signal_strength">LTE信号强度：</string>
    <string name="title_lte_rsrp">LTE RSRP：</string>
    <string name="title_lte_rsrq">LTE RSRQ：</string>
    <string name="title_lte_rssnr">LTE RSSNR：</string>
    <string name="title_lte_cqi">LTE CQI：</string>
    <string name="title_power_source">供电方式：</string>
    <string name="title_battery_level">电池电量：</string>
    <string name="title_battery_volt">供电电压：</string>
    <string name="title_battery_temp">电池温度：</string>
    <string name="title_android_version">Android系统版本：</string>
    <string name="title_cpu_usage">总CPU使用率：</string>
    <string name="title_cpu0_usage">CPU0使用率：</string>
    <string name="title_cpu1_usage">CPU1使用率：</string>
    <string name="title_cpu2_usage">CPU2使用率：</string>
    <string name="title_cpu3_usage">CPU3使用率：</string>
    <string name="title_cpu4_usage">CPU4使用率：</string>
    <string name="title_cpu5_usage">CPU5使用率：</string>
    <string name="title_cpu6_usage">CPU6使用率：</string>
    <string name="title_cpu7_usage">CPU7使用率：</string>
    <string name="title_total_mem">总内存：</string>
    <string name="title_total_mem_mi">总内存（MI）：</string>
    <string name="title_free_mem">可用内存：</string>
    <string name="title_mem_usage_ratio">内存使用率：</string>

</resources>
