<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editDialNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/callButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:hint="@string/edit_dial_num" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/callTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editDialNum"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/call_title" />
    
    <TextView
        android:id="@+id/callTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/callRepeatTimesTextView"
        android:layout_above="@+id/callRepeatTimesTextView"
        android:layout_marginBottom="30dp"
        android:text="@string/title_call_duration" />

    <EditText
        android:id="@+id/callTimeEdit"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/callTimeTextView"
        android:layout_toRightOf="@+id/callTimeTextView"
        android:ems="10" />

    <EditText
        android:id="@+id/callRepeatTimesEdit"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDialNum"
        android:layout_alignTop="@+id/callRepeatTimesTextView"
        android:layout_toRightOf="@+id/callRepeatTimesTextView"
        android:layout_marginLeft="5dp"
        android:ems="10" >

        
    </EditText>

    <TextView
        android:id="@+id/callRepeatTimesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/callButton"
        android:layout_alignLeft="@+id/editDialNum"
        android:layout_marginBottom="30dp"
        android:text="@string/sms_repeat_times" />

    <CheckBox
        android:id="@+id/addCallTaskCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/caption_add_task" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="88dp"
        android:text="@string/call_button"
        android:textSize="50sp" />
    
</RelativeLayout>
