<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/testCaseTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:text="@string/caption_testcase_title"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/testCaseNameTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/testCaseTitleTextView"
        android:text="TextView"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/delayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/testCaseNameTextView"
        android:text="@string/caption_delay"
        android:textSize="10sp" />

    <Button
        android:id="@+id/delTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:minHeight="30dp"
        android:text="@string/caption_delete"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/delayTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/delTaskButton"
        android:layout_toRightOf="@+id/delayTextView"
        android:ems="10"
        android:textSize="10sp" />

</RelativeLayout>
